--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -1,52 +1,7 @@
-#top {
-  display: flex;
-  height: 50px;
-  text-align: left;
-  font-family: 'Times New Roman', Times, serif;
-  color: $main-text-color;
-  // background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
-  background-color: $primary-color;
-  padding: 30px 5.6rem;
-  margin: 0;
-  position: sticky;
-  top: 0;
-  align-items: center;
-  z-index: 2;
-
-  .nav-icons {
-    position: absolute;
-    right: 10px;
-    align-items: center;
-    margin-bottom: 0;
-  }
-
-  li {
-    display: inline;
-    margin: 10px;
-    font-weight: bold;
-    font-size: large;
-    cursor: pointer;
-    align-items: center;
-  }
-}
-
-body {
-  background-color: $primary-color;
-}
-
 #hero {
   min-height: 100vh;
   height: max-content;
   display: flex;
-
-  // display: grid;
-  // grid-template-columns: repeat(2, 1fr);
-  // grid-template-rows: repeat(3, 300px);
-  // grid-gap: 20px;
-  // margin-left: 20px;
-  // margin-right: 20px;
-  
-  // align-items: center;
   border-bottom: 0px;
   background-color: $primary-color;
   font-weight: 400;
@@ -55,68 +10,13 @@ body {
   padding: 0rem 5.6rem;
   margin-top: 60px;
   margin-bottom: 0;
-  // top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   z-index: -1;
 
-  // Set position sticky so the jumbotron stays fixed while you scroll.
-  // position: sticky;
-
-  // If you want to set a background image on the hero section, uncomment these with your custom image
-
-  /* background: url("/src/assets/[your-image].png");
-  background-position: center;
-  background-size: cover; */
-
   @include respond(phone) {
     padding: 0rem $default-font-size;
-  }
-
-  h1 {
-    padding: 0;
-    color: $main-text-color;
-    background-image: none;
-  }
-
-  .container {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .skills-section {
-    display: grid;
-    grid-template-columns: 50px 500px;
-    grid-gap: 35%;
-    margin-top: 100px;
-    margin-bottom: 80px;
-    // font-size: $default-font-size;
-    font-size: x-large;
-    // font-weight: bold;
-  }
-
-  .skills-heading hr {
-    border-top: 3px solid $main-text-color;
-    // height: 3px;
-    // background-color: $main-text-color;
-  }
-
-  .skills-heading {
-    font-weight: bold;
-    font-size: x-large;
-    color: $main-text-color;
-    
-  }
-
-  .skills-list-container {
-    display: flex;
-    justify-content: right;
-  }
-
-  .skills-list {
-    list-style: none;
-    text-align: left;
   }
 
   .hero-title {
@@ -150,23 +50,38 @@ body {
     }
   }
 
-  .hero-cta {
-    display: flex;
-    // position: absolute;
-    bottom: 5%;
-    background-color: white;
-    font-weight: bold;
-    ;
+  .container {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .skills-section {
+    display: grid;
+    grid-template-columns: 50px 500px;
+    grid-gap: 35%;
+    margin-top: 100px;
+    margin-bottom: 80px;
+    font-size: x-large;
+    
+    .skills-heading {
+      font-weight: bold;
+      font-size: x-large;
+      color: $main-text-color;
 
-    @include respond(tab-port) {
-      justify-content: center;
-    }
+      hr {
+        border-top: 3px solid;
+        width: 100%;
+        background-color: $main-text-color;
+      }
+    }  
 
-    & a {
-      font-size: 2.4rem;
-
-      @include respond(phone) {
-        font-size: 2rem;
+    .skills-list-container {
+      display: flex;
+      justify-content: right;
+      
+      .skills-list {
+        list-style: none;
+        text-align: left;
       }
     }
   }
