--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,5 +14,6 @@
 
 @import "./sass/sections/about";
 @import "./sass/sections/contact";
+@import "./sass/sections/navbar";
 @import "./sass/sections/hero";
 @import "./sass/sections/projects";
