--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -85,6 +85,17 @@
       }
     }
   }
+
+  @media (width < 875px) {
+    .skills-section {
+      display: flex;
+      flex-direction: column;
+
+      .skills-list-container {
+        justify-content: center;
+      }
+    }
+  }
 }
 
 
