Added and styled responsive contact form.

--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -10,6 +10,7 @@
   margin-top: -10rem;
   margin-bottom: -1px;
   color: $white-color;
+  font-family: 'Times New Roman', Times, serif;
 
   @include respond(tab-land) {
     padding: 10rem 0;
