--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -1,6 +1,7 @@
 #projects {
   background-color: $white-color;
   color: $dark-blue-text;
+  font-family: 'Times New Roman', Times, serif;
   margin-top: -10rem;
   padding-top: 15rem;
 
