--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -66,3 +66,60 @@
     transform: translateY(-2px);
   }
 }
+
+.contact-title {
+  text-align: start;
+  text-transform: none;
+}
+
+.contact-header {
+  text-align: center;
+}
+
+.contact-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+#contact-form {
+  padding: 10px;
+  width: 70%;
+  background-color: $primary-color;
+  border-radius: 20px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+  display: block;
+  p {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 3rem;
+
+    button {
+      width: 20rem;
+      padding: 7px;
+      border-radius: 30px;
+
+      &:hover {
+        background-color: $main-text-color;
+      }
+    }
+  }
+
+  input, textarea {
+    border-radius: 20px;
+    padding: 5px;
+  }
+
+  label {
+    text-align: center;
+    display: block;
+  }
+
+  @media (max-width: 777px) {
+    input, textarea {
+      width: 90%;
+    }
+
+    p button {
+      width: 60%;
+    }
+  }
+}
