--- a/src/sass/sections/_navbar.scss
+++ b/src/sass/sections/_navbar.scss
@@ -42,13 +42,16 @@
       li {
         list-style: none;
         cursor: pointer;
+        margin-left: 20px;
   
-        a {
-          text-decoration: none;
+        a i {
+        //   text-decoration: none;
           color: $main-text-color;
-          padding: 1rem;
-          font-family: 'Times New Roman', Times, serif;
-          font-size: x-large;
+          font-size: xx-large;
+          
+        //   padding: 1rem;
+        //   font-family: 'Times New Roman', Times, serif;
+        //   font-size: x-large;
   
           &:hover {
             color: #69c4eb;
